Fix bug clients

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/logo/logo.svg" alt="Besnik." />
+                        <a href="/">
+                            <img src="./assets/img/logo/logo.svg" alt="Besnik." />
+                        </a>
 
                         <!-- Navigation -->
                         <ul>
@@ -91,23 +93,33 @@
                     </div>
 
                     <div class="images">
-                        <img
-                            src="./assets/img/clients/me-undies.svg"
-                            alt="me-undies"
-                        />
-                        <img src="./assets/img/clients/slack.svg" alt="slack" />
-                        <img
-                            src="./assets/img/clients/amazon.svg"
-                            alt="amazon"
-                        />
-                        <img
-                            src="./assets/img/clients/woo-commerce.svg"
-                            alt="woo-commerce"
-                        />
-                        <img
-                            src="./assets/img/clients/sitepoint.svg"
-                            alt="sitepoint"
-                        />
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients/me-undies.svg"
+                                alt="me-undies"
+                            />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/clients/slack.svg" alt="slack" />
+                        </a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients/amazon.svg"
+                                alt="amazon"
+                            />
+                        </a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients/woo-commerce.svg"
+                                alt="woo-commerce"
+                            />
+                        </a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/clients/sitepoint.svg"
+                                alt="sitepoint"
+                            />
+                        </a>
                     </div>
                 </div>
             </div>
