--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main>
+        <main> 
             <!-- Header -->
-            <header class="header">
+            <header class="header-fixed">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
                         <a href="/">
                             <img src="./assets/img/logo/logo.svg" alt="Besnik." />
                         </a>
-
+        
                         <!-- Navigation -->
                         <ul>
                             <li>
@@ -40,14 +40,19 @@
                                 <a href="">Contact</a>
                             </li>
                         </ul>
-
+        
                         <!-- Actions -->
                         <div class="actions">
                             <a href="#" class="action-link">Sign in</a>
                             <a href="#" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
+                </div>
+            </header>
 
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -69,7 +74,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Clients -->
             <div class="clients">
