--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main> 
+        <main id="home"> 
             <!-- Header -->
             <header class="header-fixed">
                 <div class="content">
@@ -25,19 +25,19 @@
                         <!-- Navigation -->
                         <ul>
                             <li>
-                                <a href="">Home</a>
+                                <a href="#home">Home</a>
                             </li>
                             <li>
-                                <a href="">Features</a>
+                                <a href="#features">Features</a>
                             </li>
                             <li>
-                                <a href="">Services</a>
+                                <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="">Resources</a>
+                                <a href="#resources">Resources</a>
                             </li>
                             <li>
-                                <a href="">Contact</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
         
@@ -130,7 +130,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -195,7 +195,7 @@
             </div>
 
             <!-- Featured -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -330,7 +330,7 @@
             </div>
 
              <!-- Stats -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -408,7 +408,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subscription">
+            <div id="contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
