--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main id="home"> 
+        <main> 
             <!-- Header -->
             <header class="header-fixed">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a href="/">
+                        <a href="#">
                             <img src="./assets/img/logo/logo.svg" alt="Besnik." />
                         </a>
         
                         <!-- Navigation -->
                         <ul>
                             <li>
-                                <a href="#home">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
                                 <a href="#features">Features</a>
