--- a/index.html
+++ b/index.html
@@ -29,19 +29,27 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="./assets/css/responsive.css" />
     </head>
     <body>
-        <!-- Header -->
+        <!-- PC header -->
         <header class="header-fixed">
             <div class="content">
                 <nav class="navbar">
+                    <!-- Tablet/mobile menu -->
+                    <label for="menu-checkbox" class="toggle-menu">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/>
+                        </svg>
+                    </label>
+
                     <!-- Logo -->
                     <a href="#">
-                        <img src="./assets/img/logo/logo.svg" alt="Besnik." />
+                        <img class="logo" src="./assets/img/logo/logo.svg" alt="Besnik." />
                     </a>
     
                     <!-- Navigation -->
-                    <ul>
+                    <ul id="pc-menu">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -57,6 +65,12 @@
                         <li>
                             <a href="#contact">Contact</a>
                         </li>
+                        <li class="show-on-mobile separate">
+                            <a href="#!">Sign in</a>
+                        </li>
+                        <li class="show-on-mobile">
+                            <a href="#!">Sign up</a>
+                        </li>
                     </ul>
     
                     <!-- Actions -->
@@ -67,7 +81,32 @@
                 </nav>
             </div>
         </header>
-        <main> 
+
+        <!-- tablet/mobile header -->
+        <header class="mobile-header">
+            <input type="checkbox" name="menu-checkbox" id="menu-checkbox" class="menu-checkbox" hidden>
+            <!-- Overlay -->
+            <label for="menu-checkbox" class="menu-overlay"></label>
+
+            <!-- Menu content -->
+            <div class="menu-drawer">
+                <!-- Logo -->
+                <a href="#">
+                    <img class="logo" src="./assets/img/logo/logo.svg" alt="Besnik." />
+                </a>
+
+                <!-- Navigation -->
+                <ul id="mobile-menu">
+                </ul>
+                <script>
+                    const pcMenu = document.querySelector('#pc-menu');
+                    const mobileMenu = document.querySelector('#mobile-menu');
+
+                    mobileMenu.innerHTML = pcMenu.innerHTML;
+                </script>
+            </div>
+        </header>
+        <main hidden> 
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -441,7 +480,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer" style="display: none;">
             <div class="content">
                 <div class="row">
                     <div class="column">
