--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </script>
             </div>
         </header>
-        <main hidden> 
+        <main> 
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -480,7 +480,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer" style="display: none;">
+        <footer class="footer">
             <div class="content">
                 <div class="row">
                     <div class="column">
