--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="featured__cta">
+                        <a href="#!" class="btn show-on-mobile">View All Properties</a>
+                    </div>
                 </div>
             </div>
 
