Fixed title web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>F8 Project 01</title>
+        <title>Besnik .</title>
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
@@ -390,7 +390,7 @@
                 </div>
             </div>
 
-             <!-- Stats -->
+            <!-- Stats -->
             <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
