--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 </div>
                 
                 <div class="row">
-                    <img src="./assets/img/logo/logo.svg" alt="Besnik." class="logo">
+                    <a href="#!"><img src="./assets/img/logo/logo.svg" alt="Besnik." class="logo"></a>
                     <p class="copyright">Copyright 2020.com, All rights reserved.</p>
                 </div>
             </div>
